--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -20,11 +20,11 @@
 
 <android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/appbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:elevation="0dp"
-    android:background="#fff">
+    app:elevation="0dp">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -44,6 +44,11 @@
             android:textColor="#333333"
             android:textSize="18sp" />
 
+        <include
+            android:id="@+id/toolbar_search_container"
+            layout="@layout/toolbar_search_layout"
+            android:visibility="gone"
+            tools:visibility="visible"/>
     </android.support.v7.widget.Toolbar>
 
 </android.support.design.widget.AppBarLayout>
