--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -15,8 +15,8 @@
         <com.flyco.tablayout.SlidingTabLayout
             android:id="@+id/id_top_tab_layout"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:background="#cacaca"
+            android:layout_height="32dp"
+            android:background="@color/colorPrimary"
             app:tl_indicator_corner_radius="1.5dp"
             app:tl_indicator_height="3dp"
             app:tl_indicator_width="10dp" />
