[update] 增加视频播放

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="navigation">#62646C</color>
 
     <color name="background">#FAFAFA</color>
+    <color name="track_header_tint">#20ffffff</color>
 </resources>
