--- a/app/src/main/res/layout/fragment_video_detail.xml
+++ b/app/src/main/res/layout/fragment_video_detail.xml
@@ -1,32 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
+    android:orientation="vertical"
     android:transitionName="@string/transition_track_background">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
+    <com.bibabo.widget.DefaultVideoPlayer
+        android:id="@+id/detail_player"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:contentScrim="@color/track_header_tint"
-            app:layout_scrollFlags="exitUntilCollapsed"
-            app:titleEnabled="false">
-
-            <com.shuyu.gsyvideoplayer.video.ListGSYVideoPlayer
-                android:id="@+id/detail_player"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                app:layout_collapseMode="parallax" />
-        </android.support.design.widget.CollapsingToolbarLayout>
-    </android.support.design.widget.AppBarLayout>
+        android:layout_height="200dp"
+        app:layout_collapseMode="parallax" />
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/scrollView"
@@ -57,4 +43,4 @@
 
     </android.support.v4.widget.NestedScrollView>
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
