--- a/app/src/main/res/layout/item_video_list.xml
+++ b/app/src/main/res/layout/item_video_list.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <TextView
+        android:id="@+id/id_video_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="123123"/>
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:textColor="#333333"
+        android:textSize="16sp" />
 </LinearLayout>
