--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,6 +14,12 @@
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="我的收藏" />
+
+        <item
+            android:id="@+id/nav_vip_video"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="vip电影"
+            />
         <item
             android:icon="@drawable/ic_menu_manage"
             android:title="设置" />
