--- a/app/src/main/res/layout/item_catalog.xml
+++ b/app/src/main/res/layout/item_catalog.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="16dp">
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/id_image_pic"
@@ -18,5 +17,6 @@
         android:gravity="center_vertical"
         android:layout_marginLeft="8dp"
         android:textColor="#333333"
-        android:textSize="16sp" />
+        android:textSize="12sp"
+        android:text="第一季 第0001集 屌丝人生"/>
 </LinearLayout>
