--- a/app/src/main/res/layout/activity_play_movie.xml
+++ b/app/src/main/res/layout/activity_play_movie.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp" />-->
 
-    <com.bibabo.widget.DefaultVideoPlayer
+    <com.bibabo.widget.VideoPlayer.QQVideoPlayer
         android:id="@+id/detail_player"
         android:layout_width="match_parent"
         android:layout_height="400dp" />
@@ -26,7 +26,7 @@
         android:id="@+id/id_analytic_url"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="播放"/>
+        android:text="解析"/>
 
     <MultiAutoCompleteTextView
         android:id="@+id/id_text_info"
